# ChangeLog for virtual/perl-Test-Simple
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Test-Simple/ChangeLog,v 1.39 2009/03/13 21:53:33 tove Exp $

  13 Mar 2009; Torsten Veller <tove@gentoo.org>
  -perl-Test-Simple-0.62.ebuild, -perl-Test-Simple-0.63.ebuild,
  -perl-Test-Simple-0.64.ebuild, -perl-Test-Simple-0.65.ebuild,
  -perl-Test-Simple-0.66.ebuild, -perl-Test-Simple-0.67.ebuild,
  -perl-Test-Simple-0.84.ebuild:
  Cleanup

*perl-Test-Simple-0.86 (21 Nov 2008)

  21 Nov 2008; Torsten Veller <tove@gentoo.org>
  +perl-Test-Simple-0.86.ebuild:
  Version bump

*perl-Test-Simple-0.84 (20 Oct 2008)

  20 Oct 2008; Torsten Veller <tove@gentoo.org>
  +perl-Test-Simple-0.84.ebuild:
  Version bump

  15 Jul 2008; Raúl Porcel <armin76@gentoo.org>
  perl-Test-Simple-0.80.ebuild:
  alpha/ia64/sparc/x86 stable

  06 Jun 2008; Alexis Ballier <aballier@gentoo.org>
  perl-Test-Simple-0.80.ebuild:
  keyword ~sparc-fbsd

*perl-Test-Simple-0.80 (09 May 2008)

  09 May 2008; Torsten Veller <tove@gentoo.org>
  +perl-Test-Simple-0.80.ebuild:
  #219480 - Version bump

  31 Mar 2008; Jeroen Roovers <jer@gentoo.org> perl-Test-Simple-0.70.ebuild:
  Stable for HPPA too.

  19 Nov 2007; Joshua Kinard <kumba@gentoo.org>
  perl-Test-Simple-0.70.ebuild:
  Stable on mips.

  10 Nov 2007; Samuli Suominen <drac@gentoo.org>
  perl-Test-Simple-0.70.ebuild:
  amd64 stable

  15 Oct 2007; Markus Rothe <corsair@gentoo.org>
  perl-Test-Simple-0.70.ebuild:
  Stable on ppc64

  09 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  perl-Test-Simple-0.70.ebuild:
  Stable on ppc.

  12 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  perl-Test-Simple-0.70.ebuild:
  Stable on sparc

  04 Jul 2007; Raúl Porcel <armin76@gentoo.org>
  perl-Test-Simple-0.70.ebuild:
  alpha/ia64/x86 stable

  11 May 2007; Joshua Kinard <kumba@gentoo.org>
  perl-Test-Simple-0.67.ebuild:
  Stable on mips.
