@@ -1,9 +1,6 @@
-EBUILD perl-Test-Simple-0.65.ebuild 465 RMD160 c9aaa957553f396dda33e0a7269f70e0e91bf7f4 SHA1 6202ff6b48a7980661ee95bcdb774444d7c97d4e SHA256 0c3b3b53a1589a9364287c220d7d9f5b416f6ba7da21e65907552f62843865a8
-EBUILD perl-Test-Simple-0.66.ebuild 502 RMD160 1dc9e549df22a8b9516832eb14b5906e6b3d8d3e SHA1 348e66ecf210cd20615fbb5aac73e8c9aca318c9 SHA256 b96dd4124f6bb895646844950e11cd8762664963b3eb3d0384eaec6dbe336164
-EBUILD perl-Test-Simple-0.67.ebuild 500 RMD160 903fe5aa9ea52ae717d6c7ffa508d49d94fe5943 SHA1 00bd24c616c9cbf76f55e20036b315677d388dd3 SHA256 e054e94cf3f7f355688d3105324cc3c67ac7a0c81ecfa97f46dde1cfb838e81e
 EBUILD perl-Test-Simple-0.70.ebuild 511 RMD160 bc8e4f581b5171efbae15c44077abb731960c56b SHA1 9e61946b499583bf50d8100509d1f40ff977af8e SHA256 213c73ec1710db81fd0c7910e5787e38071d89cc8714e183a9a12a34284dd285
 EBUILD perl-Test-Simple-0.80.ebuild 527 RMD160 9b5f38121d1e0b6078d23ed342f11bf0402badbc SHA1 11ba15ec2f524c4cd5a17ce37f59faff595a9676 SHA256 65ac7c96a3c763c1c174d59d5067c01d2887e5d994d8d73ed2b8522fa92f39aa
-EBUILD perl-Test-Simple-0.84.ebuild 525 RMD160 493a84dfe15a6d1ea277d2d805a4a33739a4c8c1 SHA1 21ff095a7bc780f5510c759952947efac231c20c SHA256 6b3f86e64ff8c58e63991c7500e4a04bf899bd8c8d838c7602dcd0db3dbe7ca2
 EBUILD perl-Test-Simple-0.86.ebuild 525 RMD160 90cb390e2b62e1741303e9805bd6015e76bb13f6 SHA1 d5e54981a00eb0c791685bdf85087aa7d1d6b47f SHA256 5ab76c1bd60eec0ecaafab000f84ceb0b10138d5f03b94ab444a761bf00fe9f5
-MISC ChangeLog 5327 RMD160 4aea1157d3560688f419777c540d89f35380aecf SHA1 c30cc5ea5e02a4284a056278b596dc6a5a3944ae SHA256 add5037000a43abff74f7770dee570eab52ed5f2a89158e243de1b4462eb8924
+EBUILD perl-Test-Simple-0.88.ebuild 525 RMD160 5f2be7b05d540af4a72670eee2d956fea57ecc89 SHA1 8cc02f15fff69e42895016d7bd286f82b2cd0b64 SHA256 c539eed1c9319878e1033bb766af9298c0034df55ae7d0e76cc0dff068d78039
+MISC ChangeLog 5462 RMD160 53de6e548fd6601b9c7f3624db7b9a4af0955427 SHA1 2db5390418bd39fe0e1e1970a093b998bac794a3 SHA256 309b4b6415fbe68913e3c356ef3ce348f5b5a709aa8c91b048c17629900a22a5
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
