@@ -1,15 +1,0 @@
-# Copyright 1999-2007 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Test-Simple/perl-Test-Simple-0.65.ebuild,v 1.2 2007/01/21 20:17:02 mcummings Exp $
-
-DESCRIPTION="Virtual for Test-Simple"
-HOMEPAGE="http://www.gentoo.org/proj/en/perl/"
-SRC_URI=""
-
-LICENSE="GPL-2"
-SLOT="0"
-KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos"
-IUSE=""
-
-DEPEND=""
-RDEPEND="~perl-core/Test-Simple-${PV}"
