@@ -1,15 +1,0 @@
-# Copyright 1999-2007 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Test-Simple/perl-Test-Simple-0.66.ebuild,v 1.7 2007/04/15 21:21:05 corsair Exp $
-
-DESCRIPTION="Virtual for Test-Simple"
-HOMEPAGE="http://www.gentoo.org/proj/en/perl/"
-SRC_URI=""
-
-LICENSE="GPL-2"
-SLOT="0"
-KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x86-solaris"
-IUSE=""
-
-DEPEND=""
-RDEPEND="~perl-core/Test-Simple-${PV}"
