@@ -1,6 +1,12 @@
 # ChangeLog for virtual/perl-Test-Simple
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Test-Simple/ChangeLog,v 1.39 2009/03/13 21:53:33 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Test-Simple/ChangeLog,v 1.40 2009/05/31 07:34:25 tove Exp $
+
+*perl-Test-Simple-0.88 (31 May 2009)
+
+  31 May 2009; Torsten Veller <tove@gentoo.org>
+  +perl-Test-Simple-0.88.ebuild:
+  Version bump
 
   13 Mar 2009; Torsten Veller <tove@gentoo.org>
   -perl-Test-Simple-0.62.ebuild, -perl-Test-Simple-0.63.ebuild,
